# blog

./: .gitignore  README.md
parsing-basics/: Cargo.toml
parsing-basics/benches/: main.rs
parsing-basics/src/: lib.rs
parsing-basics/src/lexer/: generated.rs  mod.rs  rules.rs  token.rs
parsing-basics/src/parser/: ast.rs  expressions.rs  hierarchy.rs  mod.rs
parsing-basics/tests/: it.rs
serde-handler/: Cargo.toml
serde-handler/examples/: working.rs  zero_copy2.rs  zero_copy3.rs  zero_copy4.rs
serde-handler/src/: channel.rs  lib.rs  missing_closure_type.rs  multiple_handlers1.rs  multiple_handlers2.rs  multiple_handlers3.rs  multiple_handlers4.rs  start.rs  working.rs  zero_copy1.rs  zero_copy2.rs  zero_copy3.rs  zero_copy4.rs
