[package]
name = "parsing-basics"
version = "0.1.0"
authors = ["Domenic Quirl <DomenicQuirl@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1"
logos = "0.12"

[dev-dependencies]
unindent = "0.1"
criterion = "0.3.4"

[[bench]]
name = "main"
harness = false
